# rust-api-http

./: Cargo.toml  README
src/: main.rs
src/conf/: db_conf.rs
src/constants/: constants.rs
src/models/: user_model.rs
src/routes/: user_routes.rs
