[package]
name = "rust-api-http"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }

[dependencies.mongodb]
version = "3.2.0"
features = ["sync"]

[debug]
address = "127.0.0.1"
port = 8000
workers = 16
keep_alive = 5
log_level = "normal"
